Aggiunte bozze per intro, autenticazione, dashboard utente;

--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -7,24 +7,22 @@
     android:orientation="vertical"
     android:scrollbarThumbHorizontal="@color/colorLoginPrimaryDark"
     android:scrollbarThumbVertical="@color/colorLoginPrimaryDark"
-    tools:context="com.ps.petappfe.LoginActivity">
+    tools:context="com.ps.petappfe.CreateUserActivity">
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="299dp"
         android:layout_height="202dp"
-        android:layout_marginLeft="70dp"
-    android:src="@drawable/catdog" />
+        android:layout_marginLeft="70dp"/>
+        //android:src="@drawable/dog" />
 
     <TextView
         android:id="@+id/createnewac"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="135dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="monospace"
-        android:text="LOGIN!"
-        android:textAlignment="center"
+        android:text="REGISTRAZIONE!"
         android:textColor="@color/primaryTextColor"
         android:textSize="40sp" />
 
@@ -33,16 +31,15 @@
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/tag"
-        android:textAlignment="center"
         android:textSize="17sp" />
 
     <EditText
-        android:id="@+id/edUsername"
+        android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
@@ -55,10 +52,22 @@
         android:padding="15dp"
         android:textSize="15sp" />
 
-
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/et_custom"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="@string/e_mail"
+        android:inputType="textEmailAddress"
+        android:padding="15dp"
+        android:textSize="15sp" />
 
     <EditText
-        android:id="@+id/edPassword"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
@@ -71,6 +80,18 @@
         android:padding="15dp"
         android:textSize="15sp" />
 
+    <EditText
+        android:id="@+id/et_repassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/et_custom"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="@string/re_type_password"
+        android:inputType="textPassword"
+        android:padding="15dp"
+        android:textSize="15sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -78,7 +99,7 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -87,25 +108,25 @@
             android:layout_marginBottom="130dp"
             android:background="@drawable/btn_custom"
             android:fontFamily="@font/roboto_regular"
-            android:text="@string/login"
+            android:text="@string/register"
             android:textColor="@android:color/white" />
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_above="@id/swipeRight"
+            android:layout_above="@id/swipeLeft"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_arrow_right" />
+            android:src="@drawable/ic_arrow_left" />
 
         <TextView
-            android:id="@+id/swipeRight"
+            android:id="@+id/swipeLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/roboto_regular"
-            android:text="@string/swipe_left_for_register"
+            android:text="@string/swipe_right_for_login"
             android:textSize="15sp" />
 
     </RelativeLayout>
