--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.ps.petappfe.MainActivity">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:layout_width="171dp"
-        android:layout_height="102dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/catdog" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:text="@string/login_text"
-        android:layout_marginTop="100dp"
-        android:textSize="18sp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorPrimary"
-        android:layout_height="wrap_content" />
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:hint="Username"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:inputType="text"
-            android:id="@+id/edUsername"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:hint="Password"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:inputType="textPassword"
-            android:id="@+id/edPassword"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="20dp"
-        android:textColor="@color/white"
-        android:background="#348feb"
-        android:backgroundTint="@color/red"
-        android:text="Login" />
-
-    <TextView
-        android:id="@+id/tvRegisterLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="145dp"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:text="@string/redirect_create_text"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
-</LinearLayout>
-
+</RelativeLayout>
