--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -7,13 +7,14 @@
     android:orientation="vertical"
     android:scrollbarThumbHorizontal="@color/colorLoginPrimaryDark"
     android:scrollbarThumbVertical="@color/colorLoginPrimaryDark"
-    tools:context="com.ps.petappfe.CreateUserActivity">
+    tools:context="com.ps.petappfe.CreateUserActivity"
+    tools:ignore="ExtraText">
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="299dp"
         android:layout_height="202dp"
-        android:layout_marginLeft="70dp"/>
-        //android:src="@drawable/dog" />
+        android:layout_marginLeft="70dp"
+        android:src="@drawable/catdog" />
 
     <TextView
         android:id="@+id/createnewac"
@@ -111,15 +112,9 @@
             android:text="@string/register"
             android:textColor="@android:color/white" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_above="@id/swipeLeft"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_arrow_left" />
 
         <TextView
-            android:id="@+id/swipeLeft"
+            android:id="@+id/toLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
