--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,10 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/im2"
     android:gravity="center_horizontal|center_vertical"
-
     android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
     tools:ignore="MissingClass">
-
 
     <TextView
         android:id="@+id/textView3"
@@ -28,12 +26,10 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="5dp" />
 
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="51dp"
-
         android:gravity="center_horizontal|center_vertical"
         app:srcCompat="@drawable/test"
         tools:ignore="MissingConstraints"
@@ -44,9 +40,7 @@
         android:id="@+id/imageView7"
         android:layout_width="match_parent"
         android:layout_height="51dp"
-
         android:layout_marginBottom="320dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/test"
         tools:ignore="MissingConstraints"
@@ -54,35 +48,29 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="51dp"
-
-        android:layout_marginBottom="244dp"
-
+        android:layout_marginBottom="260dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/test"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_editor_absoluteX="49dp" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="71dp"
         android:layout_height="51dp"
-
-        android:layout_marginBottom="204dp"
-
+        android:layout_marginBottom="124dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/test"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="193dp" />
+        tools:layout_editor_absoluteX="83dp" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="98dp"
         android:layout_height="80dp"
-
         android:layout_marginBottom="956dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/test"
         tools:ignore="MissingConstraints"
@@ -92,10 +80,8 @@
         android:id="@+id/imageView2"
         android:layout_width="671dp"
         android:layout_height="51dp"
-
         android:layout_marginStart="264dp"
         android:layout_marginTop="-770dp"
-
         android:layout_marginBottom="70dp"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -115,6 +101,16 @@
         app:srcCompat="@drawable/g"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="-15dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="362dp"
+        android:layout_marginStart="-350dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:srcCompat="@drawable/g"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
