--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -35,7 +35,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/roboto_regular"
-        android:text="@string/tag"
+        android:text="@string/login_text"
+        android:textAlignment="center"
         android:textSize="17sp" />
 
     <EditText
