--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -23,9 +23,17 @@
     <color name="green_200">#55cf86</color>
     <color name="green_500">#0f9d58</color>
     <color name="green_700">#006d2d</color>
+    
 
     <!--colros for card-->
     <color name="whiteCardColor">#fff</color>
 
+        <color name="list_color_1">#b3e1ee</color>
+        <color name="list_color_1a">#6ac6dd</color>
 
+        <color name="list_color_2">#ffcacf</color>
+        <color name="list_color_2a">#fea1ac</color>
+
+        <color name="list_color_3">#cde431</color>
+        <color name="list_color_3a">#a8ca02</color>
 </resources>
