--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,12 +10,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-<style name="InputDialogText">
-<item name="android:layout_width">match_parent</item>
-<item name="android:layout_height">wrap_content</item>
-<item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-<item name="android:textStyle">normal</item>
-</style>
+    <style name="InputDialogText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="colorPrimary">#ffffff</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+   </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
